@@ -1,3 +1,7 @@
+2005-07-07 Alain Magloire
+	Try to suspend the target before disconnecting.
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
+
 2005-06-29 Alain Magloire
 	Fix PR 100602
 	* mi/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java
